--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link crossorigin="anonymous"
           href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,600,700"
           rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,300,0,0" />
 </head>
 <body>
   <app-root></app-root>
